.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:31:56 **** Incremental Build of configuration Debug for project TestC ****
make all 
Building file: ../src/TestC.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/TestC.d" -MT"src/TestC.d" -o "src/TestC.o" "../src/TestC.c"
../src/TestC.c: In function ‘matrix’:
../src/TestC.c:20:9: warning: return makes integer from pointer without a cast [-Wint-conversion]
  return matrixA;
         ^~~~~~~
../src/TestC.c:20:9: warning: function returns address of local variable [-Wreturn-local-addr]
../src/TestC.c: In function ‘main’:
../src/TestC.c:27:19: error: invalid initializer
  int test[N][N] = matrix();
                   ^~~~~~
make: *** [src/subdir.mk:20: src/TestC.o] Error 1
